[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = randomfield
description = Generate random fields for cosmology
long_description = This package provides utilities for efficient generation of random fields for cosmology. Based on the astropy affiliated package template.
author = David Kirkby
author_email = dkirkby@uci.edu
license = BSD
url = http://randomfield.readthedocs.org/
edit_on_github = True
github_project = dkirkby/randomfield
